some fixes for color scale, naming of techs as well as additions for font color and other layouting including spacing and black borders

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,4 +2,5 @@
 
 *{
   font-family: Lato;
+  color: #1f2120;
 }
